# StarTrace-32-NextGen

./: .cursorignore  .gitignore  CMakeLists.txt  README.md  kconfigs.in  kconfigs_projbuild.in  partitions.csv  partitions_custom.csv  sdkconfig  sdkconfig.old
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
data/: index.html
flash_data/: 00_StartUp_getAssets.js  01_StartUp_ScanECus.js  02_StartUp_getDiagDescriptions.js  03_StartUp_PopulateTables.js  04_Common_DiagnosticRequest.js  05_Common_ShowContent.js  06_Common_CreateContent.js  06_Common_HandleIdentifications.js  07_Common_HandleIdentifications.js  07_Common_InterpretData.js  08_Common_HandleMeasurements.js  09_Common_HandleFaultCodes.js  09_Common_InterpretData.js  99_Trash.js  commonfunctions.js  config.json  home.html  identification.html  index.html  startupfunctions.js
main/: CMakeLists.txt  HandleFileReading.c  HandleFileReading.h  HandleLED.c  HandleLED.h  HandleUDSRequest.c  HandleUDSRequest.h  HandleUDSRequests.h  InitializeFilesystem.c  InitializeFilesystem.h  Kconfig.projbuild  createWebserver.c  createWebserver.h  functions.c  functions.h  idf_component.yml  initWifi.c  initWifi.h  initializeSDCard.c  initializeSDCard.h  isotp.c  isotp.h  isotp_callbacks.c  isotp_link_containers.c  isotp_link_containers.h  isotp_links.c  isotp_tasks.c  main.c  messages.h  monitor_task.c  monitor_task.h  mutexes.h  periodic_messages.c  periodic_messages.h  queues.h  task_priorities.h  twai_tasks.c  twai_tasks.h  v4.1_Test_1.code-workspace
